src/BloomBrowserUI/bookLayout/basePage.less
/* ... */
.bloom-vertical-align-bottom {
    justify-content: flex-end;
    &:not(.bloom-bilingual):not(.bloom-trilingual) .bloom-editable {
        justify-content: flex-end;
    }
}

/* ------------------------------------------------------
/*		Visibility System
/*		https://goo.gl/EgnSJo
/* ------------------------------------------------------*/

//Each bloom-translationGroup has 0 or more div.bloom-editables.
//Each .bloom-editable has a lang attribute to tell us what language it is in.
//Each of these is assumed to be unwanted:
.bloom-editable {
    display: none;
    order: 99; //if somehow we don't have an order for this, show it last (default is 0, which would be first)
}
.bloom-translationGroup {
    display: flex;
    flex-direction: column;
}
// And now we can control the order using Flexbox "order" attribute:
//sadly, as of Dec 2016, browsers do not implement the full attr() spec, so this rule is rejected
// [data-language-order]{
// 	order:  attr(data-language-order integer);
// }
// Note, we could still use a data-* attribute and do this instead: [data-language-order='1']
// But for now, we're sticking with the older .bloom-content* classes.
.bloom-content1 {
    order: 0;
}
.bloom-content2 {
    order: 1;
}
.bloom-content3 {
    order: 2;
}

//Enhance: I think these could be computed, based on the current margin
@OddPageNumberPosition: 57px;
@EvenPageNumberPosition: 60px;

.numberedPage {
    &:after {
        content: attr(data-page-number);
        font-size: 14pt;
        position: absolute;
        bottom: 20px;
    }
    &.side-left:after {
        // side-___ maintained by c#
        left: @OddPageNumberPosition;
    }
    &.side-right:after {
        // side-___ maintained by c#
        right: @EvenPageNumberPosition;
        text-align: right;
    }
}

// When bloom-showImageDescriptions is set (typically only when the relevant toolbox is showing, currently,
// but we'd like to be able to turn it on in the end result, too), we make the picture shrink to fit
// in the left half and show the translation group in the right half.
// This rule would like to live in basePage-sharedRules, but we need display:flex in Bloom and display:block
// in epubs.
.bloom-showImageDescriptions .bloom-imageContainer .bloom-imageDescription {
    // We really just want to turn off the display:none that usually applies to image descriptions
    // inside image containers, but we have to set something. Fortunately, translation groups
    // are always display:flex (when not hidden) in Bloom itself.
    display: flex;
}

// When bloom-showImageDescriptions is set (typically only when the relevant toolbox is showing, currently,
// but we'd like to be able to turn it on in the end result, too), we make the picture shrink to fit
// in the left half and show the translation group in the right half.
// NB: this rule was in basePage-sharedRules, but epubcheck objects to the "position: absolute;".
// "position: absolute;" is required for the text to display in the proper location.  If we ever want to
// display like this in ePUBs (picture and description side by side), some other approach will be needed.
.bloom-showImageDescriptions .bloom-imageContainer {
    background-size: 50% auto;
    background-position-x: 0;
    .bloom-imageDescription {
        width: 50%;
        // not needed in content pages, but for some reason on cover.
        // Overridden in edit mode to make room for special border on top.
        height: 100%;
        top: 0;

        position: absolute;
        left: 50%;
        box-sizing: border-box;
        border-left: solid lightgray 1px;
        // We also want to turn off the display:none that usually applies to translation groups
        // inside image containers (above), but we want display:flex in Bloom, and display:block
        // in epubs. So that rule is elsewhere.
    }
    // Requiring a direct child helps prevent this from applying to things like the format cog
    > img {
        width: 50%;
    }
}

// if brandings has hyperlinks, we default to not showing ugly blue underlines in print.
// those could be re-enabled for digital products
div[data-book*="branding"] {
    a:link,
    a:visited {
        color: unset;
        text-decoration: unset;
    }
}

// Both canvas used in editing and svg used in permanent doc need to be
// above image and below TOP box and overlayed.
.comical-generated {
    z-index: 1;
    position: absolute;
}

//... to be continued. We sandwich most other sheets between this one and the langVisibility.css, which comes last-ish

// now apply any book features
@import "bookFeatures.less";

